# agent4ba-v2

./: .env.example  .gitignore  CHANGELOG.md  CLARIFICATION_LOOP_MVP.md  DIAGNOSTIC_EPIC_ARCHITECT.md  DIFF_VIEWER_IMPLEMENTATION.md  EPIC_ARCHITECT_AGENT_TEST.md  FETCHEVENTSOURCE_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  REALTIME_SSE_STREAMING_GUIDE.md  REFACTORING_GRAPH.md  ROUTER_COT_VALIDATION.md  SFD.md  SSE_KEEPALIVE_VALIDATION.md  SSE_PARSING_FIX.md  TESTING.md  TEST_SEQUENTIAL_IDS.md  TIMELINE_SSE_VALIDATION.md  TWO_PHASE_WORKFLOW_TEST.md  agent_registry.default.yaml  agent_registry.local.yaml.example  conftest.py  pyproject.toml  test_agent_node_epic.py  test_agent_normalization.py  test_clarification_loop.py  test_clarification_structure.py  test_context_feature.py  test_delete_document.py  test_ecommerce_backlog.py  test_fallback.py  test_fallback_integration.py  test_fallback_simple.py  test_graph_refactoring.py  test_intents.py  test_json_cleaning.py  test_json_parser.py  test_registry_service.py  (+3 more)
agent4ba/: __init__.py
docs/: multi_turn_api.md  prioritization_matrix.md
frontend/: .env.example  .gitignore  README.md  i18n.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.test.json
prompts/: decompose_feature.yaml  decompose_objective.yaml  extract_requirements.yaml  generate_acceptance_criteria.yaml  generate_diagram.yaml  generate_epics.yaml  generate_test_cases.yaml  improve_description.yaml  intent_classifier.yaml  invest_analysis.yaml  modify_schema.yaml  refine_backlog.yaml  (+2 more)
(+101 files in other folders)
